--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
     </div> 
 
     <div class="contact-form">
-        <form action="">
+        <form action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="e7b08ef1-4755-40a5-97c9-ff65553d093f">
             <input type="" placeholder="Enter Your Name" required>
             <input type="email" placeholder="Enter Your Email" required>
 
