--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         <h4>Let's Work Together</h4>
         <p>Your digital storefront deserves the best. Our frontend services are tailored to enhance your website's aesthetics, optimize performance, and deliver an unparalleled user interface.</p>
         <div class="contact-list">
-            <li><i class='bx bxs-send bx-flip-vertical'></i> aniljoya268@gmail.com</li>
+            <li><i class='bx bxs-send bx-flip-vertical'></i> aniljoya23@gmail.com</li>
             <li><i class='bx bxs-phone'></i> 6283515028</li>
         </div>
         <div class="contact-icon">
@@ -261,7 +261,8 @@
     </div> 
 
     <div class="contact-form">
-        <form action="">
+       <form action="https://api.web3forms.com/submit" method="POST">
+            <input type="hidden" name="access_key" value="e7b08ef1-4755-40a5-97c9-ff65553d093f">
             <input type="" placeholder="Enter Your Name" required>
             <input type="email" placeholder="Enter Your Email" required>
 
