--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
     <div class="contact-form">
        <form action="https://api.web3forms.com/submit" method="POST">
             <input type="hidden" name="access_key" value="e7b08ef1-4755-40a5-97c9-ff65553d093f">
-            <input type="" placeholder="Enter Your Name" required>
-            <input type="email" placeholder="Enter Your Email" required>
+            <input type="" placeholder="Enter Your Name" name="name" required>
+            <input type="email" placeholder="Enter Your Email" name="email" required>
 
-            <input type="" placeholder="Enter Your Subject">
-            <textarea name="" id="" cols="40" rows="10" placeholder="Enter Your Message" required></textarea>
+            <input type="" placeholder="Enter Your Subject" name="subject">
+            <textarea name="" id="" cols="40" rows="10" placeholder="Enter Your Message" name="message" required></textarea>
 
             <input type="submit" value="submit" class="send" style="margin-top: 20px;">
         </form>
