--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <input type="text" placeholder="Enter Your Subject" name="subject">
             <textarea cols="40" rows="10" placeholder="Enter Your Message" name="message" required></textarea>
 
-            <input type="submit" value="submit" class="send" style="margin-top: 20px;">
+            <input type="submit" value="submit" class="send" name="submit" style="margin-top: 20px;">
         </form>
     </div>
 </section>
